k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp-nodejs
  template:
    metadata:
      labels:
        app: webapp-nodejs
    spec:
      containers:
      - name: webapp-nodejs
        image: 905418297736.dkr.ecr.eu-central-1.amazonaws.com/webapp-nodejs-repo:latest
        ports:
          - containerPort: 3000
