k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
spec:
  type: LoadBalancer
  selector:
    app: app-2048  # Adjust the selector based on your application labels
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
