k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: nginx-2048-ingress
annotations:
   kubernetes.io/ingress.class: nginx

spec:
  rules:
  - host: ac211656fed9a4ea88462f0b2e7e7278-54709836.eu-central-1.elb.amazonaws.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-2048
            port:
              number: 80
